# machine-translation

./: .dockerignore  .gitignore  README.md  pyproject.toml  ruff.toml
app/: config.py  logging_config.py  main.py
app/api/: routes.py
app/middleware/: request_logging.py  safeguard.py
app/models/: registry.py
app/schemas/: translation.py
tests/: conftest.py  test_api.py  test_registry.py  test_safeguard.py
