[project]
name = "machine-translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.0"
dependencies = [
    "fastapi>=0.124.4",
    "numpy<2",
    "pydantic-settings>=2.8.1",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.0",
    "torch==2.2.2",
    "transformers>=4.36.0,<4.46.0",
    "uvicorn>=0.33.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
